--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Pizzaria - Super Pizza</title>
   </head>
   <body>
